--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^10.0.2",
+    "@react-three/fiber": "^9.0.4",
     "@studio-freight/lenis": "^1.0.42",
     "clsx": "^2.1.1",
     "cobe": "^0.6.3",
-    "framer-motion": "^12.4.2",
+    "framer-motion": "^12.4.7",
     "gsap": "^3.12.7",
     "jq": "^1.7.2",
     "lenis": "^1.1.20",
@@ -21,7 +23,8 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "swiper": "^11.2.4",
-    "tailwind-merge": "^3.0.1"
+    "tailwind-merge": "^3.0.1",
+    "three": "^0.173.0"
   },
   "devDependencies": {
     "rimraf": "^6.0.1",
