--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@studio-freight/lenis": "^1.0.42",
     "clsx": "^2.1.1",
     "cobe": "^0.6.3",
+    "formidable": "^3.5.2",
     "framer-motion": "^12.4.10",
     "framer-motion-3d": "^12.4.10",
     "gsap": "^3.12.7",
     "jq": "^1.7.2",
     "lenis": "^1.1.20",
     "next": "15.1.6",
+    "nodemailer": "^6.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
