--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-three/drei": "^10.0.3",
     "@react-three/fiber": "^9.0.4",
     "@studio-freight/lenis": "^1.0.42",
+    "@tailwindcss/vite": "^4.0.14",
     "clsx": "^2.1.1",
     "cobe": "^0.6.3",
     "formidable": "^3.5.2",
@@ -27,6 +28,7 @@
     "react-icons": "^5.4.0",
     "swiper": "^11.2.4",
     "tailwind-merge": "^3.0.1",
+    "tailwindcss": "^4.0.14",
     "three": "^0.173.0"
   },
   "devDependencies": {
